fix path prefix

--- a/.github/workflows/gastby-publish.yml
+++ b/.github/workflows/gastby-publish.yml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - uses: enriikke/gatsby-gh-pages-action@v2.1.1
+      - uses: enriikke/gatsby-gh-pages-action@296333de9726ebb92be57158b99f8d2d64a2e3d7
         with:
           access-token: ${{ secrets.ACCESS_TOKEN }}
+          gatsby-args: --prefix-paths
