--- a/.github/workflows/gastby-publish.yml
+++ b/.github/workflows/gastby-publish.yml
@@ -14,3 +14,4 @@ jobs:
         with:
           access-token: ${{ secrets.ACCESS_TOKEN }}
           gatsby-args: --prefix-paths
+          skip-publish: false
